@@ -1,6 +1,8 @@
 Revision history for Dist-Zilla-Plugin-DynamicPrereqs
 
 {{$NEXT}}
+          - bump version of [MakeMaker::Awesome] needed for optional tests, to
+            skip past some problematic changes to Makefile.PL whitespace
 
 0.025     2016-04-21 15:18:58Z (TRIAL RELEASE)
           - bumped up "background perl" used in ExtUtils::HasCompiler
